add more of freddys bit

--- a/microbes.tex
+++ b/microbes.tex
@@ -11,9 +11,10 @@
 \Crefname{figure}{Figure}{Figures}
 \crefname{equation}{equation}{equations}
 \Crefname{Equation}{Equation}{Equation}
+\crefname{section}{section}{section}
 
 \title{A Review of The Study of Microbes in Space}
-\author{Andrew Cooper, Edvinas Pakanavičius, Emma Ryan, Freddy Tanner, Magdalen Berns}
+\author{Andrew Coop, Edvinas Pakanavičius, Emma Ryan, Freddy Tanner, Magdalen Berns}
 \date{\today}
 
 %\setlength\parindent{0pt}
@@ -165,9 +166,6 @@ matrix is highest and finally biofilm matures with characteristic three dimensio
 \todo[inline] {fig: "shows very basic formation of non-motile and motile biofilm. Non motile is on
 the left and motile is on the right"}.
 
-
-
-
 One useful application of biofilm formation in outer space would be to control dust particles in
 Mars or Moon or other planets. One of the properties of Mars is that mainly all the surface is
 covered with fine dust which can damage different kinds of equipment and respiratory systems
@@ -226,73 +224,142 @@ radiation to their cells.
 \todo[inline]{table}
 
 
-\section{Freddy's bit}
-The large array of possible uses for microbes in microgravity environments has been explored in the previous sections. Thus, it is evident there needs to be research into the necessary technology that would make these applications a reality.
-
-Due to the less than intuitive nature of the physics involved with microgravity, there are two areas of discussion; each demonstrating possible methods to perform simple operations on particulates in a microgravity environment. The first area will explore methods of separation and fractionation of particulates; this being a basic operation with many uses on an interplanetary space ship. The 
-second area will look at a possible low energy method of mixing.
-
-In 2009 EuroGeoMars campaign was organised to perform multidisciplinary astrobiology research at Mars Desert Research Station (MDRS). This station is situated in the desert of southeast Utah. It has very dry soils similar to Mars and they are subject to wind erosion. The daily variation of temperature can be around 20 o C with temperature differences of -36 to $46\,^{\circ}\mathrm{C}$.
-At MDRS variety of clay minerals has been detected. Also it has red-coloured hills, soils and
-sandstone due to the iron-oxide present which is the same mineral that gives red colour to Mars
-environment. Research concluded that all domains of life were detected and with high
-occurrence and diversity over short distances. This means that these potential bacteria could be
-introduced in Mars environment and Mars soil could provide minerals for the growth of these
-microbes.\cite{} [1, 2]. Another research made by L.C. Kelly, Charles S. Cockell and Stephen
-Summers show how non-spore forming microbes such as Proteobacteria(Pseudomonas) can
-survive very high pH levels which occurs due to the high concentration of ammonia(NH3)
-which is normally highly toxic to organisms. The experiment shows that these microorganisms
-can survive temperatures as low as -80 o C which is the temperature of Mars surface at some
-points.\cite{} [3] .
+\section{The Separation and Mixing of Microbes in a Microgravity Environment}
+The large array of possible uses for microbes in microgravity environments has been explored in the previous sections. Thus, it is evident that researching what technology is required to make these applications a reality is needed. 
 
 
-However, what is very surprising that extreme environmental conditions in space can be dealtby larger eukaryotic organism - lichens. Study made by Jean-Pierre De Verra concludes that many lichens are able to live and photosynthesize under harsh conditions, characterized by low temperatures, aridity and high UV radiation fluxes.\cite{}[4] Xanthoria elegans can even survive onouter space conditions. Many exposure tests were done on satellite FOTON M3 and International Space station and have shown the capacity to maintain physiological and photosynthetic activity and even the capacity to germinate and grow which shows the extraordinary abilities of surviving.
+Due to the less than intuitive nature of the physics involved with microgravity this section is broken into two sections, each one demonstrating possible methods to perform simple operations on particulates in a microgravity environment. The first section will explore methods of separation and fractionation of particulates, this being a basic operation with many uses on an interplanetary space ship. The second section will look at a possible low energy method of mixing.
 
-One of the most \todo[inline]{subjective language} interesting bacteria was found in collected water at 2.8 km beneath the Earth in South African gold mine [5deep earth gold miner]. They are of particular interest because
-they show insights of life independent of the photosphere. Candidus Desulforudis audaxviator composes more than 99.9% of the microorganisms inhabiting that environment. It is sulphate
-reducing chemoautotrophic thermophile which can fix its own nitrogen and carbon from surroundings. This means that this type of bacteria has the whole ecosystem in its genome and can survive alone without the help of other microorganisms.
+\subsection{Separation}
 
-Evidence shows that life can be sustained by a huge range of different environmental parameters and by the help of genetic engineering useful microbes can be generated from different varieties of organisms.
+Conservation and recycling of materials is vital in any type of long duration space exploration due to limited available volume, need to minimise mass and because power is a limited commodity. One area of interest is how to separate microbes from mixtures in microgravity. This would allow the microbes to be reused and any other products to be treated suitably so that interplanetary ships could be self-sufficient for the maximum possible length of time.
+
+Due to the lack of gravitational forces, mixtures in microgravity do not sediment as on earth. As seen in the first chapter of this report, the continuous Brownian motion of particles and lack of convection currents causes researchers to have to explore means of particle separation that would not be as effective or commonly used in a terrestrial environment. Again due to the lack of gravity, it is found that gas and liquid do not separate from each other naturally. Instead, the gas created from reactions of chemicals or processes of microbes will form bubbles within the liquid which do not separate themselves due to buoyancy, and therefore gravity. Thus a system needs to be implemented in order to separate gas and liquid. Means of separation of different phases of matter in microgravity will now be explored.
 
 \subsection{Phase Separation}
+There are numerous methods of phase separation. Some common phase separators use capillary forces or hydrophilic/hydrophobic systems. An example of one of these systems is the integral wick separator (IWS) which uses pours hydrophilic plates to allow energy transfer between a coolant line and humid air. Incoming air will cool, allowing humidity to condensate onto plates. The separator then utilizes capillary action to move the condensate from the plates to a volume filled with wicking material, ie. a material designed to take on moisture by encouraging capillary action. Condensate in the wicking material is then separated via an outlet line, which is maintained at a lower pressure to allow water removal and with a hydrophilic membrane cover to prevent gas from entering.\cite{ellis2013tangential}
 
-There are numerous methods of phase separation. Some common phase separators use capillary forces or hydrophilic/hydrophobic systems. An example of these systems is the integral wick separator (IWS) which uses porous hydrophilic plates to allow energy transfer between a coolant line and humid air. Incoming air will cool, allowing humidity to condensate onto plates. The separator then utilizes capillary action to move the condensate from the plates to a volume filled with wicking material, ie. a material designed to take on moisture by encouraging a capillary action. Condensate in the wicking material is then separated via an outlet line, which is maintained at a lower pressure to allow water removal and, with a hydrophilic membrane cover, to prevent gas from entering.\cite{}
+One key issue with this, and many other designs of phase separators systems, is that they are typically designed for specific uses, ie they need redesigned if required for a different application. Thus, a change to the design of the system it is being combined with could well require a change in the design of the separator. This can be seen with capillary style separators, which are good for low volume flow but are completely impractical for high flow rate systems. It would be a great simplification to find a method of phase separation which can be easily used for many applications with little design change.
 
-One key issue with this, and many other designs of phase separators systems, is that they are typically designed for specific uses, ie one of thermal management, power generation and advanced life support. Thus, a change to the design of the system it is being combined with could well require a change in the design of the separator. This can be seen with capillary style separators, which are are good for low volume flow but are completely impractical for high flow rate systems. It would be a great simplification to find a method of phase separation which can be easily used for many applications with little design change.
-
-A key contemporary method of separation of gas and liquid in microgravity is by vortex separation, also known as cyclonic separation. Vortex separators have been found to be quite versatile in many applications. They can be easily integrated into systems with little change to the design of the separator so it is evident that they could be an interesting and fruitful area of research.\cite{}
+A key contemporary method of separation of gas and liquid in microgravity is by vortex separation, also known as cyclonic separation. Vortex separators have been found to be quite versatile in many applications. They can be easily integrated into systems with little change to the design of the separator so it is evident that they could be an interesting and fruitful area of research.\cite{bean2002vortex}
 
 Using rotational movement, it is possible to separate mixtures of gases and liquids, or indeed any other two phase substance. A diagram of a vortex separator can be seen in \cref{fig:vortex}.
 
 \begin{figure}[ht]
 \centering
 \includegraphics[scale=1.0]{images/vortex-sep.png}
-\label{fig:vortex}
 \caption{Texas A \& M Vortex Separator}
+\label{fig:vortex}
 \end{figure}
 
-The nozzle acts as an inlet letting a mixture of liquid and gas, ie a two phase substance, into the separator. The injection of fluid in via the nozzle will convert pressure head, the internal energy of a fluid due to the pressure exerted on its container, into velocity. The momentum of this injected fluid is coupled to the rotating cylinder thus forming a rotational flow. Due to this rotational movement, and therefore radial acceleration, the denser liquid remains at the wall of the chamber and the less dense gas migrates radially inward.\cite{} This forms a vortex/cyclone along the centre axis of the cylinder. Under microgravity conditions, and neglecting capillary forces, the vortex will take the shape of a cylinder made up of gas surrounded by an annulus, doughnut shape of dense liquid.
+The nozzle acts as an inlet letting a mixture of liquid and gas, ie a two phase substance, into the separator. The injection of fluid in via the nozzle will convert pressure head, the internal energy of a fluid due to the pressure exerted on its container, into velocity. The momentum of this injected fluid is coupled to the rotating cylinder thus forming a rotational flow. Due to this rotational movement, and hence radial acceleration, the denser liquid remains at the wall of the chamber and the less dense gas migrates radially inward.\cite{hawkes1998ultrasonic} 
 
-\begin{figure}[ht1]
+This forms a vortex/cyclone along the centre axis of the cylinder. Under microgravity conditions, and neglecting capillary forces, the vortex will take the shape of a cylinder made up of gas surrounded by an annulus, doughnut shape, of dense liquid.
+\todo[inline]{you need to refer to this image if you are going to use it}
+\begin{figure}[ht]
 \centering
 \includegraphics[scale=0.6]{images/viewer.png}
 \label{fig:vortex}
-\caption{Texas A \& M Vortex Separator}
+\caption{Top Down View of a Vortex Separator during Microgravity Testing}
 \end{figure}
 
 As it is in effect, buoyancy which controls the separation of dissimilar density fluids can be used to describe the force acting on the less dense fluid, ie the gas. The force acting on the infinitesimal unit of less dense fluid can be calculated using Newton’s second law shown in \cref{eq:nii}
 
+
 \begin{equation}
-d\underline{F}=\underline{a}dm=\underline{a}\rho dV
+mathrm{d\underline{F}=\underline{a}dm=\underline{a}\rho dV}
 \label{eq:nii}
 \end{equation}
 Where $d\underline{F}$ the force acting on the infinitesimal unit of less dense fluid, $\underline{a}$ is the acceleration, $dm$ is the mass of the infinitesimal unit, $\rho$ the density of the fluid and $dV$ is the volume of the infinitesimal unit.
-\todo[inline]{changed format to explain use of variables - keep consistent}
+
+On earth the acceleration is gravity which allows a natural phase separation to occur. Since the vortex separator is for use in microgravity we must provide an alternative acceleration. This alternative is in the form of the radial acceleration provided by the radial movement of the fluid, which is created as discussed above.  The centripetal acceleration which is, in cylindrical coordinates is written as is shown in \cref{eq:cent_accel}
+
+\begin{equation}
+a_c(r,\theta, z)=\frac{v_c(r,\theta, z)^2}{r}
+\label{eq:cent_accel}
+\end{equation}
+
+Where $r$, $\theta$, $z$ are the radial, angular and vertical positions respectively and is $v_c$ is the velocity.
+
+By expressing the pressure on the inner side of an element of fluid
+\begin{equation}
+P_1=p -\frac{\partial p}{\partial r} \frac{d r}{2}
+\label{eq:pressure1}
+\end{equation}
+
+Where $p$ is the pressure at the midpoint of the element and r is the outer side from the midpoint. Then 
+
+By expressing the pressure on the inner side of an element of fluid as in \cref{eq:pressure2}
+\begin{equation}
+P_1=p+\frac{\partial p}{\partial r} \frac{d r}{2}
+\label{eq:pressure2}
+\end{equation}
+
+Combining \cref{eq:pressure1} and \cref{eq:pressure2} yields an expression for the surface force in the radial direction, given by \cref{eq:surface_force}
+
+By expressing the pressure on the inner side of an element of fluid as in \cref{eq:pressure2}. Similar expressions can be found in the z and $\theta$ directions.
+\begin{equation}
+d\underline{F}=-\frac{\partial p}{\partial r}r drd\theta{}dz\hat{r}
+\label{eq:surface_force}
+\end{equation}
+
+The combination of these expressions gives \cref{eq:bouy} which describes the total resultant of the body and surface force, which must be zero. Thus a term can be obtained for the pressure field which provides a force necessary for buoyancy to occur:
+
+\begin{equation}
+p(r)=\frac{1}{2}p_l \omega^2 r^2 + p_o
+\label{eq:bouy}
+\end{equation}
+
+Where $\omega$ is the averae angular velocity $p_o$ the initial pressure in the chamber and $p_l$ is the density of the more dense fluid, in this case the more dense fluid is the liquid.
+
+As can be seen this pressure profile increases quadratically for a centripetal acceleration but only increases linearly for a gravitational system, constant acceleration. As gravity can be considered constant while centripetal acceleration of a fluid increases linearly with gradient, the pressure gradient developed by a rotating liquid flow increases from the central axis as the square of the radial position. This increased pressure means that the movement of bubbles in a vortex separator can be quite quick even at relatively low energies. Let us now inspect the movement of individual bubbles.
+
+There is an effect on the buoyancy force acting on gas bubbles within the rotating flow. Consider the bubble shown in \cref{fig:bubble}
+
+\todo[inline]{you need to refer to this image if you are going to use it}
+\begin{figure}[ht]
+\centering
+\includegraphics[scale=1.0]{images/bubble.png}
+\caption{A Bubble within a Vortex Separator}
+\label{fig:bubble}
+\end{figure}
+
+The pressure gradient, \cref{eq:bouy} is in terms of radial location within the vortex separator. In order to determine the buoyancy force acting on the bubble shown above, \cref{fig:bubble},\cref{eq:bouy} must be translated into the coordinate system used to describe the bubble, ie. spherical polar. This works out as is shown in \cref{eq:bubble}
+
+\begin{equation}
+p(\alpha,\beta)=\frac{1}{2}p_l \omega^2\left[\sin^2{\beta}+L^2-2LR\sin^2{\beta}\cos^2{\alpha}\right]+p_o
+\label{eq:bubble}
+\end{equation}
+
+With $\beta$ the angle in the median plan $\alpha$ the angle in the azimuthal plane and L the distance from the separator axis to the centre of the bubble.
+
+This pressure can be interpreted as acting normal to the surface of the bubble and also acting inwards towards the centre. Due to spherical symmetry of the coordinate system used and the pressure only depending on the radial position, the angular and axial components of the pressure balance over the entire surface of the bubble. 
+
+It can then be shown that in the cylindrical coordinate system of the separator this pressure acts in the radial direction only. Integration of the pressure over the surface of the bubble yields a buoyancy force in the form given by \cref{eq:bouy_force}
+
+\begin{equation}
+F_B=-p_l\omega^2 LV\hat{r}
+\label{eq:bouy_force}
+\end{equation}
+
+Where $\omega$ is the angular velocity of the bubble and $V$ is the volume of the bubble. This buoyancy increases linearly with the radial position thus a bubble entering the vortex separator at the wall, a where the entrance nozzle is placed, will experience the greatest buoyancy force.
 
 
-On Earth, the acceleration is gravity which allows a natural phase separation to occur. Since the vortex separator is for use in microgravity we must provide an alternative acceleration. This alternative is in the form of the radial acceleration provided by the radial movement of the fluid, which is created as discussed above. The centripetal acceleration, in cylindrical coordinates, is written as:
+
+When the velocity of the bubble is calculated, it is found that the vortex separator is extremely effective with a bubble quickly separating from the bulk of the liquid.
+
+(for a more detailed analysis of the forces acting within the separator one should consult \todo[inline]{I don't understand this}
+
+A key benefit of vortex separators, in a microgravity environment, is the lack of moving parts, hence avoiding the problems with unreliability which can impact on mechanical systems. Also, in comparison with mechanical systems, the only power needed to operate a vortex separator is the pressure head. This small power consumption is important in as energy is limited while undertaking space travel. 
+(Note that the above theory is demonstrated with the thought of a gas/liquid mixture in mind but can also be used for liquid/solid, such as for particulates in suspension, or gas/solid, such as for smoke).
+
 
 \subsection{Fractionation of Particulates}
+
+The vortex based separator is appropriate, and indeed very effective, for the separation of two phase substances. However, a second important separation process worth investigating is the fractionation of different sized particulates. This could be the separation of microbes from a product of a process undergone in a bioreactor or indeed the separation of particulates from suspension. By sorting microbes from product and waste it would be possible to recycle as many materials as possible. One such application already in use is the automatic change of nutrient solution and the harvesting of cell products in certain cell reactors. 
+
+The exposing of particles to an ultrasonic standing wave causes them to move to pressure nodes or antinodes, ie particles become concentrated at half-wavelength intervals. In a plane stationary field particles will concentrate in uniform planar sheets each separated by a half-wavelength distance. The positioning of particles in such a structure is due to the acoustic radiation force and diffusion.\cite{
+
 \section{Conclusion}
 
 \bibliography{microbes}
